--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,3 +1,30 @@
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    About Rango
+{% endblock %}
+
+{% block body_block %}
+    <h1>Rango says...</h1>
+    <div>
+        here is the about page. <br />
+        <strong>This tutorial has been put together by {{ name }}</strong><br />
+    </div>
+    <a href="{% url 'index' %}">Index</a> <br/>
+    <hr/>
+    <div style="width:400px; height:300px; display:flex; align-items:center; justify-content:center;">
+        <img style='width:100%; height:auto;' src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+    </div>
+    <div style="width:400px; height:300px; display:flex; align-items:center; justify-content:center;">
+        <img style='width:100%; height:auto;' src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+    </div>
+
+{% endblock %}
+
+
+
+
 <!DOCTYPE html>
 {% load staticfiles %}
 
@@ -6,17 +33,6 @@
     <title>Rango</title>
 </head>
 <body>
-    <h1>Rango says...</h1>
-    <div>
-        here is the about page. <br />
-        <strong>This tutorial has been put together by {{ name }}</strong><br />
-    </div>
-    <div>
-        <a href="{% url 'index' %}">Index</a> <br/>
-        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-    </div>
-    <div>
-        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
-    </div>
+
 </body>
 </html>
