--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,27 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
-<h2>Add Pages</h2>
-<form method="POST" action="/rango/category/{{ category.slug }}/add_page/">
-    {% csrf_token %}
-    <h2>Category: {{ category.slug }}</h2>
-    {% for hidden in form.hidden_fields %}
-        {{ hidden }}
-    {% endfor %}
-    {% for h in form.visible_fields %}
-        <p>{{ h.errors }}</p> <br/>
-        <strong>{{ h.help_text }}</strong> <br/>
-        <div>{{ h }}</div><br/>
-    {% endfor %}
-    <br/>
-    <input type="submit" name="submit" value="Submit"/>
-</form>
-<form>
+{% extends 'rango/base.html' %}
 
-</form>
-</body>
-</html>
+{% block title_block %}
+    Add a Page
+{% endblock %}
+
+{% block body_block %}
+
+    <form method="POST" action="{% url 'rango:add_page' category.slug %}">
+        {% csrf_token %}
+        <h2>Category: {{ category.slug }}</h2>
+        {% for hidden in form.hidden_fields %}
+            {{ hidden }}
+        {% endfor %}
+        {% for h in form.visible_fields %}
+            <p>{{ h.errors }}</p> <br/>
+            <strong>{{ h.help_text }}</strong> <br/>
+            <div>{{ h }}</div><br/>
+        {% endfor %}
+        <br/>
+        <input type="submit" name="submit" value="Submit"/>
+    </form>
+{% endblock %}
+
+
+{#<!DOCTYPE html>#}
+{#<html lang="en">#}
+{#<head>#}
+{#    <meta charset="UTF-8">#}
+{#    <title>Rango</title>#}
+{#</head>#}
+{#<body>#}
+{#<h2>Add Pages</h2>#}
+{#<form method="POST" action="{% url 'rango:add_page' category.slug %}">#}
+{#    {% csrf_token %}#}
+{#    <h2>Category: {{ category.slug }}</h2>#}
+{#    {% for hidden in form.hidden_fields %}#}
+{#        {{ hidden }}#}
+{#    {% endfor %}#}
+{#    {% for h in form.visible_fields %}#}
+{#        <p>{{ h.errors }}</p> <br/>#}
+{#        <strong>{{ h.help_text }}</strong> <br/>#}
+{#        <div>{{ h }}</div><br/>#}
+{#    {% endfor %}#}
+{#    <br/>#}
+{#    <input type="submit" name="submit" value="Submit"/>#}
+{#</form>#}
+{#<form>#}
+{##}
+{#</form>#}
+{#</body>#}
+{#</html>#}
