--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
-<div>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    {% if category %}
+        {{ category.name }}
+    {% else %}
+        Unknown Category
+    {% endif %}
+{% endblock %}
+
+{% block body_block %}
     {% if category %}
         <h1>{{ category.name }}</h1>
         {% if pages %}
@@ -15,17 +19,10 @@
                 {% endfor %}
             </ul>
         {% else %}
-            {#            <strong>There are no pages present.</strong>#}
-            {# The info above commented are from TWD book on Moodle, but test files can only accept the below info instead of the above.#}
             <strong>No pages currently in category.</strong>
         {% endif %}
-        <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br/>
+        <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br/>
     {% else %}
         The specified category does not exist.
     {% endif %}
-</div>
-<div>
-    <a href="/rango/">Index</a><br/>
-</div>
-</body>
-</html>
+{% endblock %}
