--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,48 +1,67 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-<head>
-    <title>Rango</title>
-</head>
-<body>
-<h1>Rango says...</h1>
-
-<div>
-    hey there partner! <br/>
-    <strong>{{ boldmessage }}</strong><br/>
-</div>
-
-<div>
-    {% if categories %}
-        <h2>Most Liked Categories</h2>
-        <ul>
-            {% for category in categories %}
-                <li><a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <strong>There are no categories present.</strong>
-    {% endif %}
-    {% if pages %}
-        <h2>Most Viewed Pages</h2>
-        <ul>
-            {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <strong>There are no pages present.</strong>
-    {% endif %}
-
-</div>
+{% block title_block %}
+    Homepage
+{% endblock %}
 
 
-<div>
-    <a href="/rango/about/">About Rango</a><br/>
-    <a href="{% url 'rango:add_category' %}">Add a New Category</a><br />
-    <img src="{% static 'images/rango.jpg' %}"
-         alt="Picture of Rango"/> <!-- New line -->
-</div>
-</body>
-</html>
+{% block body_block %}
+    <h1>Rango says...</h1>
+    <div>
+        hey there partner! <br/>
+        <strong>{{ boldmessage }}</strong><br/>
+    </div>
+
+    <div>
+        {% if categories %}
+            <h2>Most Liked Categories</h2>
+            <ul>
+                {% for category in categories %}
+                    <li><a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
+        {% if pages %}
+            <h2>Most Viewed Pages</h2>
+            <ul>
+                {% for page in pages %}
+                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no pages present.</strong>
+        {% endif %}
+
+    </div>
+    <div style="width:600px; height:500px; display:flex; align-items:center; justify-content:center;">
+        <img style='width:100%; height:auto;' src="{% static 'images/rango.jpg' %}" alt="Picture of Rango"/>
+    </div>
+{% endblock %}
+
+
+
+
+
+
+{#<!DOCTYPE html>#}
+{#{% load staticfiles %}#}
+{##}
+{#<html>#}
+{#<head>#}
+{#    <title>Rango</title>#}
+{#</head>#}
+{#<body>#}
+{##}
+{##}
+{##}
+{#<div>#}
+{#    <a href="{% url 'rango:about' %}">About Rango</a><br/>#}
+{#    <a href="{% url 'rango:add_category' %}">Add a New Category</a><br />#}
+{#<img src="{% static 'images/rango.jpg' %}"#}
+{#     alt="Picture of Rango"/> <!-- New line -->#}
+{#</div>#}
+{#</body>#}
+{#</html>#}
