--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -12,12 +12,12 @@
     </title>
 </head>
 <body>
-<div style="float: left; margin-right: 20px;">
+<div>
     {% block sidebar_block %}
         {% get_category_list category %}
     {% endblock %}
 </div>
-<div style="float: left">
+<div>
 
     {% block body_block %}
     {% endblock %}
@@ -25,9 +25,20 @@
 <hr/>
 <div>
     <ul>
-        <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+        {% if user.is_authenticated %}
+            <li><a href="{% url 'rango:restricted' %}">Restricted Page</a></li>
+            <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+            <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+        {% else %}
+            <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
+        <li><a href="{% url 'rango:login' %}">Login</a></li>
+        {% endif %}
+
         <li><a href="{% url 'rango:about' %}">About</a></li>
         <li><a href="{% url 'rango:index' %}">Index</a></li>
+
+
+
     </ul>
 </div>
 </body>
