--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -21,7 +21,11 @@
         {% else %}
             <strong>No pages currently in category.</strong>
         {% endif %}
-        <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br/>
+        {% if user.is_authenticated %}
+            <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br/>
+        {% else %}
+            <a href="{% url 'rango:register' %}"><strong>Register here for adding pages</strong></a>
+        {% endif %}
     {% else %}
         The specified category does not exist.
     {% endif %}
