--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,6 +10,7 @@
     <div>
         here is the about page. <br />
         <strong>This tutorial has been put together by {{ name }}</strong><br />
+        <strong>Visits: {{ visits }}</strong>
     </div>
     <a href="{% url 'index' %}">Index</a> <br/>
     <hr/>
